log
Sat, Apr 19, 2025  5:39:14 PM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Sat, Apr 19, 2025  6:26:23 PM: 
 hashmap.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
 tests:  0|0
1f2a567
Sat, Apr 19, 2025  6:31:18 PM: 
 hashmap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
0683a78
Sat, Apr 19, 2025  6:34:19 PM: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:92:18: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     map->current = NULL;
                  ^
cc1.exe: all warnings being treated as errors
bb56fde
Sat, Apr 19, 2025  6:34:36 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
1c001ab
Sat, Apr 19, 2025  6:40:00 PM: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  9|2
total_score: 50/70
3e73e29
Sat, Apr 19, 2025  6:43:47 PM: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  12|1
total_score: 60/70
b54676c
